--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>mil.nga.geopackage</groupId>
 	<artifactId>geopackage-core</artifactId>
-	<version>1.2.2</version>
+	<version>1.2.2-SF-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>GeoPackage Core</name>
 	<url>https://github.com/ngageoint/geopackage-core-java</url>
@@ -50,7 +50,7 @@
 		<dependency>
 			<groupId>mil.nga</groupId>
 			<artifactId>wkb</artifactId>
-			<version>1.0.2</version>
+			<version>1.1.0-SF-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.osgeo</groupId>
